syntax = "proto3";
package message;

//服务器类型
enum SERVICE{
    NONE= 0;
    CLIENT=1;
    GATE= 2;//网关,转发服务
    GM=3;//gamemgr
    GAME=4;//game
    ZONE=5;//地图
    DB=6;//db
};

enum CHAT{
    MSG_TYPE_WORLD= 0;
    MSG_TYPE_PRIVATE= 1;
    MSG_TYPE_ORG= 2;
    MSG_TYPE_COUNT= 3;
};

message PlayerData{
    int64 PlayerID = 1;
    string PlayerName = 2;
    int32 PlayerGold = 3;
}

//客户端包头
message Ipacket{
    int32  Stx = 1;
    SERVICE  DestServerType = 2;
    int32  Ckx = 3;
    int64  Id = 4;
}

//心跳包
message HeardPacket{ 
}